--- a/src/App.scss
+++ b/src/App.scss
@@ -3,15 +3,19 @@
   display: flex;
   flex-direction: row;
   background: #EBEFF4;
+  width: 100%;
 
   &__section{
     flex: 1;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
+
   }
 
   &__body{
     flex: 1;
-    padding: 20px;
+
+    overflow: auto;
   }
 }
