--- a/src/components/aside-nav.scss
+++ b/src/components/aside-nav.scss
@@ -2,6 +2,7 @@
     background: #264E66;
     width: 70px;
     text-align: center;
+    padding: 10px;
 
     &__logo{
         margin-top: 14px;
@@ -22,3 +23,4 @@
         }
     }
 }
+
