--- a/src/index.scss
+++ b/src/index.scss
@@ -2,7 +2,12 @@
 
 $textColor:hsl(210, 7%, 29%);
 html, body{
-  height: 100%;;
+  min-height: 100%;
+  overflow: hidden;
+  height: 100%;
+  *{
+    box-sizing: content-box;
+  }
 }
 
 body {
@@ -147,5 +152,17 @@ textarea{
       }
     }
 
+  }
+}
+
+
+@media (max-width: 750px) {
+  .md-hide{
+      display: none !important;
+  }
+}
+@media (max-width: 550px) {
+  .sm-hide{
+      display: none !important;
   }
 }
