--- a/src/pages/Auth/Auth.scss
+++ b/src/pages/Auth/Auth.scss
@@ -1,10 +1,30 @@
 .LogIn, .SignIn{
-    width: 350px;
+    max-width: 350px;
+    width: 100%;
+    flex: 1;
+    margin: 20px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    .input-group{
+        flex: 1;
+        display: flex;
+        width: 100%;flex-direction: column;
+        small{
+            margin-bottom: 10px;
+        }
+    }
     input{
-        width: 320px;
+        //width: 320px;
+        flex: 1;
+        margin: 0;
+        margin-bottom: 10px;
     }
     button{
-        width: 340px;
+        flex: 1;
+        margin: 0px;
+        //width: 340px;
     }
 
     h1 img{
