--- a/src/pages/Providers/Providers.scss
+++ b/src/pages/Providers/Providers.scss
@@ -1,5 +1,12 @@
 .Providers{
     /**/
+    .table-responsive{
+        overflow: auto;
+        margin-left: -20px;
+        margin-right: -20px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
     table{
         border-collapse: collapse;
         margin-top: 20px;
