--- a/src/index.scss
+++ b/src/index.scss
@@ -155,6 +155,11 @@ textarea{
   }
 }
 
+.float-margin{
+  margin:10px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
 
 @media (max-width: 750px) {
   .md-hide{
@@ -164,5 +169,8 @@ textarea{
 @media (max-width: 550px) {
   .sm-hide{
       display: none !important;
+  }
+  .float-margin{
+    margin: 10px !important;
   }
 }
