--- a/src/pages/Auth/Auth.scss
+++ b/src/pages/Auth/Auth.scss
@@ -1,12 +1,12 @@
 .LogIn, .SignIn{
-    max-width: 350px;
-    width: 100%;
+    width: 350px;
+    max-width: 100%;
     flex: 1;
-    margin: 20px;
+    margin: 0px;
     padding: 20px;
     display: flex;
     flex-direction: column;
-    align-items: stretch;
+
     .input-group{
         flex: 1;
         display: flex;
