--- a/src/pages/Providers/Providers.scss
+++ b/src/pages/Providers/Providers.scss
@@ -99,10 +99,12 @@
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    padding: 40px;
 
     .card{
-        width: 250px;
+        max-width: 250px;
+        flex:1;
+        display: flex;
+        flex-direction: column;
         .star{
             margin-right:5px;
             cursor: pointer;
